bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - GroupedProduction2 (Initial).snap
---
source: bench/tests/plans/wind_farm.rs
expression: canonicalize_uuids(&explanation.initial_logical_plan.to_string())
---
Projection: ENV_PT(site_label) AS site_label, ENV_PT(wtur_label) AS wtur_label, year AS year, month AS month, day AS day, hour AS hour, minute_10 AS minute_10, ENV_PT(avg_val) AS avg_val
  Projection: site_label, wtur_label, year, month, day, hour, minute_10, avg_val
    Extend: ?avg_val 00000000000000000000000000000001
      Projection: site_label, wtur_label, year, month, day, hour, minute_10, 00000000000000000000000000000001
        Aggregate: groupBy=[[site_label AS site_label, wtur_label AS wtur_label, ENV_PT(year) AS year, ENV_PT(month) AS month, ENV_PT(day) AS day, ENV_PT(hour) AS hour, ENV_PT(minute_10) AS minute_10]], aggr=[[AVG(ENC_TV(val)) AS 00000000000000000000000000000001]]
          Filter: EBV(BOOLEAN_AS_TERM(coalesce(EBV(BOOLEAN_AS_TERM(coalesce(EBV(BOOLEAN_AS_TERM(coalesce(EBV(EQ(ENC_TV(site_label), ENC_TV(Struct({term_type:2,value:Wind Mountain,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:})))), Boolean(false)) AND coalesce(EBV(BOOLEAN_AS_TERM(EBV(EQ(ENC_TV(wtur_label), ENC_TV(Struct({term_type:2,value:A1,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:})))) OR EBV(EQ(ENC_TV(wtur_label), ENC_TV(Struct({term_type:2,value:A2,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:})))) OR EBV(EQ(ENC_TV(wtur_label), ENC_TV(Struct({term_type:2,value:A3,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:})))) OR EBV(EQ(ENC_TV(wtur_label), ENC_TV(Struct({term_type:2,value:A4,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:})))) OR EBV(EQ(ENC_TV(wtur_label), ENC_TV(Struct({term_type:2,value:A5,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:})))) OR EBV(EQ(ENC_TV(wtur_label), ENC_TV(Struct({term_type:2,value:A6,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:})))) OR EBV(EQ(ENC_TV(wtur_label), ENC_TV(Struct({term_type:2,value:A7,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:})))) OR EBV(EQ(ENC_TV(wtur_label), ENC_TV(Struct({term_type:2,value:A8,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:})))) OR EBV(EQ(ENC_TV(wtur_label), ENC_TV(Struct({term_type:2,value:A9,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:})))) OR EBV(EQ(ENC_TV(wtur_label), ENC_TV(Struct({term_type:2,value:A10,data_type:http://www.w3.org/2001/XMLSchema#string,language_tag:})))))), Boolean(false)))), Boolean(false)) AND coalesce(EBV(GEQ(ENC_TV(t), ENC_TV(Struct({term_type:2,value:2022-08-30T08:46:53,data_type:http://www.w3.org/2001/XMLSchema#dateTime,language_tag:})))), Boolean(false)))), Boolean(false)) AND coalesce(EBV(LEQ(ENC_TV(t), ENC_TV(Struct({term_type:2,value:2022-08-30T21:46:53,data_type:http://www.w3.org/2001/XMLSchema#dateTime,language_tag:})))), Boolean(false))))
            Extend: ?year YEAR(ENC_TV(t))
              Extend: ?month MONTH(ENC_TV(t))
                Extend: ?day DAY(ENC_TV(t))
                  Extend: ?hour HOURS(ENC_TV(t))
                    Extend: ?minute_10 MUL(ENC_TV(Struct({term_type:2,value:10,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:})), FLOOR(DIV(MINUTES(ENC_TV(t)), ENC_TV(Struct({term_type:2,value:10.0,data_type:http://www.w3.org/2001/XMLSchema#decimal,language_tag:})))))
                      SparqlJoin: Inner 
                        SparqlJoin: Inner 
                          SparqlJoin: Inner 
                            SparqlJoin: Inner 
                              SparqlJoin: Inner 
                                SparqlJoin: Inner 
                                  SparqlJoin: Inner 
                                    SparqlJoin: Inner 
                                      SparqlJoin: Inner 
                                        SparqlJoin: Inner 
                                          SparqlJoin: Inner 
                                            SparqlJoin: Inner 
                                              SparqlJoin: Inner 
                                                SparqlJoin: Inner 
                                                  SparqlJoin: Inner 
                                                    SparqlJoin: Inner 
                                                      QuadPattern (?site <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#Site>), active_graph: Union of [DefaultGraph] 
                                                      QuadPattern (?site <http://www.w3.org/2000/01/rdf-schema#label> ?site_label), active_graph: Union of [DefaultGraph] 
                                                    QuadPattern (?site <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?wtur_asp), active_graph: Union of [DefaultGraph] 
                                                  QuadPattern (?wtur_asp <http://www.w3.org/2000/01/rdf-schema#label> ?wtur_label), active_graph: Union of [DefaultGraph] 
                                                QuadPattern (?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?wtur_asp), active_graph: Union of [DefaultGraph] 
                                              QuadPattern (?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?gensys_asp), active_graph: Union of [DefaultGraph] 
                                            QuadPattern (?wtur <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#A>), active_graph: Union of [DefaultGraph] 
                                          QuadPattern (?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?gensys_asp), active_graph: Union of [DefaultGraph] 
                                        QuadPattern (?gensys <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#RA>), active_graph: Union of [DefaultGraph] 
                                      QuadPattern (?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?generator_asp), active_graph: Union of [DefaultGraph] 
                                    QuadPattern (?generator <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?generator_asp), active_graph: Union of [DefaultGraph] 
                                  QuadPattern (?generator <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#GAA>), active_graph: Union of [DefaultGraph] 
                                QuadPattern (?generator <https://github.com/magbak/chrontext#hasTimeseries> ?ts), active_graph: Union of [DefaultGraph] 
                              QuadPattern (?ts <http://www.w3.org/2000/01/rdf-schema#label> "Production"), active_graph: Union of [DefaultGraph] 
                            QuadPattern (?ts <https://github.com/magbak/chrontext#hasDataPoint> ?dp), active_graph: Union of [DefaultGraph] 
                          QuadPattern (?dp <https://github.com/magbak/chrontext#hasValue> ?val), active_graph: Union of [DefaultGraph] 
                        QuadPattern (?dp <https://github.com/magbak/chrontext#hasTimestamp> ?t), active_graph: Union of [DefaultGraph]
